// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Default 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <select
          class="form-control"
          id="foo"
          name="foo"
        >
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Select Error Feedback 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Select field
        </label>
        <select
          class="form-control is-invalid"
          id="foo"
          name="foo"
        >
          <option
            disabled=""
            value=""
          >
            Please select an option...
          </option>
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        >
          This field is required
        </div>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Select Help Text 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Select field
        </label>
        <select
          class="form-control"
          id="foo"
          name="foo"
        >
          <option
            disabled=""
            value=""
          >
            Please select an option...
          </option>
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
        <small
          class="form-text text-muted"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et orci diam. Donec rutrum odio sit amet ante porta, sed tempus est varius.
        </small>
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Select Initial Value 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Select field
        </label>
        <select
          class="form-control"
          id="foo"
          name="foo"
        >
          <option
            disabled=""
            value=""
          >
            Please select an option...
          </option>
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Select Label 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Select field
        </label>
        <select
          class="form-control"
          id="foo"
          name="foo"
        >
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Select Placeholder 1`] = `
<div
  class="mt-5 ml-5 mr-5 row"
>
  <div
    class="col-lg-6 col-md-8 col-sm-10 col-12"
  >
    <form
      class=""
    >
      <div
        class="form-group"
        name="foo"
      >
        <label
          class="form-label"
          for="foo"
        >
          Select field
        </label>
        <select
          class="form-control"
          id="foo"
          name="foo"
        >
          <option
            disabled=""
            value=""
          >
            Please select an option...
          </option>
          <option
            value="value1"
          >
            Value 1
          </option>
          <option
            value="value2"
          >
            Value 2
          </option>
          <option
            value="value3"
          >
            Value 3
          </option>
          <option
            value="value4"
          >
            Value 4
          </option>
          <option
            value="value5"
          >
            Value 5
          </option>
        </select>
        <div
          class="invalid-feedback"
        />
      </div>
      <div
        class="d-flex justify-content-end"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
